data/derived/comb/progs/unify/prog0292.ml.out
Characters 116-117:
  in g
     ^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
